tests/bad_programs/semantic_errors/funcall_wrong_number_of_args2.notc
void fun (bool a, bool b) {
}

int main() {
    fun(true);
    return 0;
}
